2013-04-16  Roland McGrath  <roland@hack.frob.com>

	* rt/tst-aio7.c (do_test): Don't test O_RDONLY fd case, which is now
	considered kosher.

2013-04-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile: Include cppflags-iterator.mk to add
	-DNOT_IN_libc=1 to CPPFLAGS of all benchmark programs.

	* Makefile.in (bench-clean): New target.
	* benchtests/Makefile (bench-clean): Likewise.

2013-04-16  David Holsgrove  <david.holsgrove@xilinx.com>

	* elf/elf.h: Add EM_MICROBLAZE and MicroBlaze relocations.

2013-04-15  Thomas Schwinge  <thomas@codesourcery.com>

	* stdio-common/tstdiomisc.c: Fix coding-style violation.

2013-04-15  Andreas Schwab  <schwab@suse.de>

	* nscd/grpcache.c (cache_addgr): Properly check for short write.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/pwdcache.c (cache_addpw): Likewise.
	* nscd/servicescache.c (cache_addserv): Likewise.  Don't write
	more than recsize.

2013-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile (bench): Write all output to
	bench-out.tmp together.

2013-04-15  Andreas Schwab  <schwab@suse.de>

	* nscd/nscd.c (main): Don't fork again after closing files.

2013-04-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/tst-fwrite-error.c (do_test): Fix BUF array definition.

	* benchtests/Rules (bench-deps): Collect dependencies into a
	single variable.  Add Makefile to dependencies.
	($(objpfx)bench-%.c): Depend on bench-deps.

2013-04-12  Roland McGrath  <roland@hack.frob.com>
	    Xavier Roche  <roche+kml2@exalead.com>

	[BZ #15361]
	* sysdeps/pthread/aio_fsync.c (aio_fsync): Don't check open modes,
	just that it's a file descriptor.
	* manual/llio.texi (Synchronizing AIO Operations): Update description
	for EBADF error from aio_fsync.

2013-04-12  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Rules (bench): Move target definition...
	* benchtests/Makefile: ... here.

2013-04-11  Carlos O'Donell  <carlos@redhat.com>
